tests/snapshots/rune_integration__rune_happy_stderr.snap
---
source: tests/rune_integration.rs
expression: stderr
---
┌─────────────┬───────────┬─────────────────────┐
│               Grading Overview                │
├─────────────┼───────────┼─────────────────────┤
│ Requirement │ Grade     │ Reason              │
├─────────────┼───────────┼─────────────────────┤
│ hello       │ 5.00/5.00 │ Got expected output │
├─────────────┼───────────┼─────────────────────┤
│               Total: 5.00/5.00                │
└─────────────┴───────────┴─────────────────────┘
