tests/snapshots/rune_integration__rune_query_constraints_stderr.snap
---
source: tests/rune_integration.rs
expression: stderr
---
Warning: No reason provided for query grading. Feedback to student will not be very helpful.
┌─────────────┬───────────┬─────────────────────────┐
│                 Grading Overview                  │
├─────────────┼───────────┼─────────────────────────┤
│ Requirement │ Grade     │ Reason                  │
├─────────────┼───────────┼─────────────────────────┤
│ query       │ 0.00/5.00 │ Query Constraint: Must  │
│             │           │ match exactly 3 times.  │
├─────────────┼───────────┼─────────────────────────┤
│                 Total: 0.00/5.00                  │
└─────────────┴───────────┴─────────────────────────┘
